unpackaged/main/default/objects/Project_Milestones__c/Project_Milestones__c.object-meta.xml
<CustomObject>
    <description>Project Milestones</description>
    <label>Project Milestone</label>
    <nameField>
        <label>Project Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>