unpackaged/main/default/objects/Project_Milestones__c/fields/Customer_PM__c.field-meta.xml
<CustomField>
    <fullName>Customer_PM__c</fullName>
    <label>Customer PM</label>
    <length>200</length>
    <type>Text</type>
</CustomField>