unpackaged/main/default/objects/Project_Milestones__c/fields/Deliverable__c.field-meta.xml
<CustomField>
    <fullName>Deliverable__c</fullName>
    <label>Deliverable</label>
    <length>250</length>
    <type>Text</type>
</CustomField>