unpackaged/main/default/objects/Project_Milestones__c/fields/Key_ID__c.field-meta.xml
<CustomField>
    <fullName>Key_ID__c</fullName>
    <externalId>true</externalId>
    <label>Key ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>