unpackaged/main/default/objects/Project_Milestones__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <label>Project Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>