unpackaged/main/default/objects/Project_Milestones__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <label>Task</label>
    <length>250</length>
    <type>Text</type>
</CustomField>