unpackaged/main/default/objects/Project_Milestones__c/fields/Techone_PM__c.field-meta.xml
<CustomField>
    <fullName>Techone_PM__c</fullName>
    <label>Techone PM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>